--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
         "@sveltejs/kit": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
         "@types/eslint": "^8.56.0",
+        "@types/node": "^24.3.1",
         "@typescript-eslint/eslint-plugin": "^7.0.0",
         "@typescript-eslint/parser": "^7.0.0",
-        "eslint-plugin-perfectionist": "^2.10.0",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-perfectionist": "^2.10.0",
         "eslint-plugin-svelte": "^2.35.1",
         "pocketbase": "^0.21.2",
         "prettier": "^3.1.1",
