--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "format": "prettier --write ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-auto": "^3.0.0",
         "@sveltejs/kit": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
         "@types/eslint": "^8.56.0",
@@ -23,7 +22,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-perfectionist": "^2.10.0",
         "eslint-plugin-svelte": "^2.35.1",
-        "pocketbase": "^0.21.2",
+        "pocketbase": "github:bunnarin/pb-js-sdk",
         "prettier": "^3.1.1",
         "prettier-plugin-svelte": "^3.1.2",
         "svelte": "^4.2.7",
@@ -32,5 +31,10 @@
         "typescript": "^5.0.0",
         "vite": "^5.0.3"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "@googleworkspace/drive-picker-element": "^0.6.2",
+        "@sveltejs/adapter-static": "^3.0.9",
+        "leaflet": "^1.9.4"
+    }
 }
