--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "dependencies": {
         "@googleworkspace/drive-picker-element": "^0.6.2",
         "@sveltejs/adapter-static": "^3.0.9",
-        "leaflet": "^1.9.4"
+        "@tailwindcss/vite": "^4.1.13",
+        "leaflet": "^1.9.4",
+        "tailwindcss": "^4.1.13"
     }
 }
