--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "pocketbase": "github:bunnarin/pb-js-sdk",
         "prettier": "^3.1.1",
         "prettier-plugin-svelte": "^3.1.2",
+        "sass": "^1.92.1",
         "svelte": "^4.2.7",
         "svelte-check": "^3.6.0",
         "tslib": "^2.4.1",
