--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "svelte-check": "^3.6.0",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
-        "vite": "^5.0.3"
+        "vite": "^5.0.3",
+        "vite-plugin-pwa": "^1.0.3"
     },
     "type": "module",
     "dependencies": {
