better buy page

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-PUBLIC_POCKETBASE_URL="http://localhost:8090"
+# app config
+PUBLIC_PB_URL="http://127.0.0.1:8090"
+PUBLIC_PAYWAY_ENDPOINT="https://checkout-sandbox.payway.com.kh"
+# google
+PUBLIC_GOOGLE_CLIENT_ID='530631853241-d9bm5q01d2kbc158t3od6oo5ga389j1r.apps.googleusercontent.com'
+PUBLIC_GOOGLE_PROJECT_NUMBER='530631853241'
