--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,8 +1,20 @@
 {
-    "start_url": "./",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#42b883",
-    "lang": "en",
-    "scope": "./"
+	"name": "Atteny",
+	"short_name": "Atteny",
+	"start_url": "/",
+	"display": "standalone",
+	"theme_color": "#ffffff",
+	"background_color": "#000000",
+	"icons": [
+		{
+			"sizes": "192x192",
+			"src": "logo192.png",
+			"type": "image/png"
+		},
+		{
+			"sizes": "511x512",
+			"src": "logo512.png",
+			"type": "image/png"
+		}
+	]
 }
