--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "prettier": "^3.1.1",
         "prettier-plugin-svelte": "^3.1.2",
         "sass": "^1.92.1",
-        "svelte": "5.0.0-next.272",
+        "svelte": "^4.2.7",
         "svelte-check": "^3.6.0",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
@@ -35,6 +35,7 @@
     "type": "module",
     "dependencies": {
         "@googleworkspace/drive-picker-element": "^0.6.2",
+        "@khmyznikov/pwa-install": "^0.5.8",
         "@sveltejs/adapter-static": "^3.0.9",
         "@tailwindcss/vite": "^4.1.13",
         "leaflet": "^1.9.4",
