--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
         "svelte-check": "^3.6.0",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
-        "vite": "^5.0.3"
+        "vite": "^5.0.3",
+        "vite-plugin-pwa": "^1.0.3"
     },
     "type": "module",
     "dependencies": {
         "@googleworkspace/drive-picker-element": "^0.6.2",
-        "@khmyznikov/pwa-install": "^0.5.8",
         "@sveltejs/adapter-static": "^3.0.9",
         "@tailwindcss/vite": "^4.1.13",
         "leaflet": "^1.9.4",
